--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -408,8 +408,13 @@ Indian Act</h3>
             <div id="ajax-1b" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
-            <div data-ajax-replace="#ajax-self"></div>
-		    <div data-ajax-replace="#ajax-t4areport"></div>
+ <h4>Withhold payroll deductions and remit the GST/HST </h4>
+          <p>  <div data-ajax-replace="#ajax-self"></div></p>
+<p> <div data-ajax-replace="#ajax-howcalc"></div>     </p> 
+ 
+<h4>Report the payment on a T4A slip </h4>
+		  <p>  <div data-ajax-replace="#ajax-t4areport"></div></p>
+  <p> <div data-ajax-replace="#ajax-howreport"></div>     </p> 
             </div>
             <div id="ajax-3yesa" class="alert alert-info hidden">
               <h3><small>Your POE result </small><br>
@@ -1127,9 +1132,9 @@ Indian Act</h3>
 <p>Add info here</p>
  </div>
 </details>
-
+<div id="ajax-howcalc">
 <p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
-
+ </div>
 </li>
 
 <li><h3 id="h_6">Report the payment on a slip</h3>
@@ -1182,9 +1187,9 @@ Indian Act</h3>
                      </ul>
  </div>
   </details>
-
+<div id="ajax-howfile">
 	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
-	
+	 </div>
 
 </li>
 
