--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -393,7 +393,7 @@ Indian Act</li>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</h3>
             <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <h4>Withhold payroll deductions</h4>
+ <h4 class="mrgn-tp-md">Withhold payroll deductions</h4>
   <p> <div data-ajax-replace="#ajax-notreg"></div>     </p>      
  <p class="mrgn-tp-md">To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
   </div>
@@ -401,18 +401,18 @@ Indian Act</h3>
               <h3><small>Your result </small><br>
                The worker is not registered under the Indian Act</h3>
   <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <h4>Withhold payroll deductions</h4>
+ <h4 class="mrgn-tp-md">Withhold payroll deductions</h4>
               <p>   <div data-ajax-replace="#ajax-notreg"></div> </p> 
             </div>
 
             <div id="ajax-1b" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
- <h4>Withhold payroll deductions and remit the GST/HST </h4>
+ <h4 class="mrgn-tp-md">Withhold payroll deductions and remit the GST/HST </h4>
           <p>  <div data-ajax-replace="#ajax-self"></div></p>
 <p> <div data-ajax-replace="#ajax-howcalc"></div>     </p> 
  
-<h4>Report the payment on a T4A slip </h4>
+<h4 class="mrgn-tp-md">Report the payment on a T4A slip </h4>
 		  <p>  <div data-ajax-replace="#ajax-t4areport"></div></p>
   <p> <div data-ajax-replace="#ajax-howreport"></div>     </p> 
             </div>
