--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1253,7 +1253,7 @@ Indian Act</h3>
                      </ul>
  </div>
   </details>
-<div id="ajax-howfile">
+<div id="ajax-howreport">
 	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
 	 </div>
 
