--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -408,13 +408,15 @@ Indian Act</h3>
             <div id="ajax-1b" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
- <h4 class="mrgn-tp-md">Withhold payroll deductions and remit the GST/HST </h4>
+<p>Add intro here. </p> 
+  <details><summary>Withhold payroll deductions and remit the GST/HST </summary>
           <p>  <div data-ajax-replace="#ajax-self"></div></p>
 <p> <div data-ajax-replace="#ajax-howcalc"></div>     </p> 
- 
-<h4 class="mrgn-tp-md">Report the payment on a T4A slip </h4>
+  </details>
+ <details><summary>Report the payment on a T4A slip </summary>
 		  <p>  <div data-ajax-replace="#ajax-t4areport"></div></p>
   <p> <div data-ajax-replace="#ajax-howreport"></div>     </p> 
+  </details>
             </div>
             <div id="ajax-3yesa" class="alert alert-info hidden">
               <h3><small>Your POE result </small><br>
