--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -393,7 +393,8 @@ Indian Act</li>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</h3>
             <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <h4 class="mrgn-tp-md">Withhold payroll deductions</h4>
+<hr> 
+<h4 class="mrgn-tp-md">Withholding obligations</h4>
   <p> <div data-ajax-replace="#ajax-notreg"></div>     </p>      
  <p class="mrgn-tp-md">To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
   </div>
@@ -401,7 +402,8 @@ Indian Act</h3>
               <h3><small>Your result </small><br>
                The worker is not registered under the Indian Act</h3>
   <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <h4 class="mrgn-tp-md">Withhold payroll deductions</h4>
+<hr>
+ <h4 class="mrgn-tp-md">Withholding obligations</h4>
               <p>   <div data-ajax-replace="#ajax-notreg"></div> </p> 
             </div>
 
@@ -409,29 +411,30 @@ Indian Act</h3>
               <h3><small>Your result </small><br>
                 Non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
 <p>Add intro here. </p> 
-  <details><summary>Withhold payroll deductions and remit the GST/HST </summary>
+<hr>
+  <details><summary>Withholding obligations </summary>
           <p>  <div data-ajax-replace="#ajax-self"></div></p>
 <p> <div data-ajax-replace="#ajax-howcalc"></div>     </p> 
   </details>
- <details><summary>Report the payment on a T4A slip </summary>
+ <details><summary>Reporting obligations - T4A slip </summary>
 		  <p>  <div data-ajax-replace="#ajax-t4areport"></div></p>
   <p> <div data-ajax-replace="#ajax-howreport"></div>     </p> 
   </details>
             </div>
             <div id="ajax-3yesa" class="alert alert-info hidden">
-              <h3><small>Your POE result </small><br>
+              <h3><small>Your result </small><br>
                 Employee reports for work physically to only 1 establishment of the employer</h3>
 	<p>The POE is where the <strong>employee reports for work</strong>.</p>
 	  <p> There is <strong>no</strong> minimum amount of time the employee has to report to that place.</p>	    
               <div data-ajax-replace="#ajax-resultperson1"></div>
             </div>
             <div id="ajax-3yesb" class="alert alert-info hidden ">
-              <h3><small>Your POE result </small><br>
+              <h3><small>Your result </small><br>
                 Employee reports for work physically to more than 1 establishment of the employer</h3>
               <div data-ajax-replace="#ajax-resultperson2"></div>
             </div>
 <div id="ajax-agreementb" class="alert alert-info hidden">
-              <h3><small>Your POE result </small><br>
+              <h3><small>Your result </small><br>
                 Employee works in Canada but does not report for work (never physically) and does not have a full-time remote work agreement</h3>
 <p><span class="fas fa-ban text-danger fa-lg"></span> If the employee is <strong>not</strong> considered to work remotely full-time, the new CRA administrative policy <strong>does not</strong> apply. </p>
            <br> 
