--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1273,6 +1273,8 @@ Indian Act</h3>
 <h3 id="h_7_1">Related</h3>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">Indian Act exemption for employment income guidelines</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">Information on the tax exemption under section 87 of the Indian Act</a></li>
+
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income </li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t90.html">T90</a>, Income Exempt From Tax Under the Indian Act</li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>, Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Ac </li>
