--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -266,17 +266,17 @@
 
 
 
-<p>The following provides the same information in <strong>two</strong> different formats:</p>			 
+<p>The following provides the same information in <strong>two</strong> different formats to determine your withholding and reporting obligations:</p>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific withholding and reporting obligations results</li>
-	<li class="cnjnctn-col"><a href="#static">Full-text</a> to determine the withholding and reporting obligations</li>
+	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific results</li>
+	<li class="cnjnctn-col"><a href="#static">Full-text</a> </li>
 	</ul>
   <div class="wb-tabs mrgn-tp-lg">
     <div class="tabpanels">
       <details id="tab1">
         <summary>Answer interactive questions</summary>
         <div id="interactive">
-          <h2 class="mrgn-tp-sm">Answer a few questions to determine the withholding and reporting obligations</h2>
+          <h2 class="mrgn-tp-sm">Answer a few questions to determine your withholding and reporting obligations</h2>
           <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
           <div class="wb-frmvld gc-font-2019">
             <form>
@@ -488,7 +488,7 @@ Indian Act</h3>
         <summary>Read full-text</summary>
         <div id="static">
           <h2 class="mrgn-tp-sm">Full-text to determine the POE</h2>
-          <p>The following is the <strong>alternate format</strong> to the above questions or results, and provides the same information in full-text. </p>
+          <p>The following is the <strong>alternate format</strong> to the specific questions or results, and provides the same information in full-text. </p>
 
 
  <h2 class="h3">On this page</h2>
