--- a/payroll/calculate/payment/indianact.html
+++ b/payroll/calculate/payment/indianact.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Payments to First Nations workers - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Employee who is registered, or entitled to be registered under the Indian Act - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -88,7 +88,7 @@
     
   <ul class="noline">    
  <li>
-	 <a href="indianact.html" class="active" aria-current="page">Payments to First Nations workers</a>
+	 <a href="indianact.html" class="active" aria-current="page">Employee who is registered, or entitled to be registered under the Indian Act</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -254,24 +254,32 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Payments to First Nations workers</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Employee who is registered, or entitled to be registered under the Indian Act</h1>
 <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations workers” is used to describe an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a> .</p>
-
-<p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether their income is taxable or exempt. </p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> For purposes of the tax exemption under section 87 of the Indian Act, the term Indian is used because it has a legal meaning in the Indian Act. Section 87 of the Indian Act exempts from taxation the personal property of an Indian situated on a reserve. The section 87 exemption:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">Only applies to an Indian as defined by the Indian Act</li>
+<li class="cnjnctn-col">Does <strong>not</strong> apply to all Indigenous Peoples in Canada such as the Inuit or Métis. </li>
+</ul>
 
  <h2 class="h3">On this page</h2>
   	
 <ul>
-<li><a href="#h_1">Steps</a></li>
+
+<li><a href="#h_1">Determine the status of the employee</a></li>
+<li><a href="#h_2">Determine the residency of the employee or employer</a></li>
+<li><a href="#h_3">Determine the percentage of duties related to employment on a reserve</a></li>
+<li><a href="#h_5">Withhold payroll deductions and remit GST/HST</a></li>
+<li><a href="#h_6">Report the employment income on a slip</a></li>
 <li><a href="#h_7">References</a>
 </li>
 </ul>
 <p><strong>Indians </strong>who want to determine if their income is taxable should fill out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">Form TD1-IN, Determination of Exemption of an Indian's Employment Income</a>.</p>
 
+<p>You must report all income and deductions on a T4 slip for status Indian employees regardless of whether their income is taxable or exempt. </p>
 <details><summary>Terms used on this page</summary>
 <dl class="dl-horizontal">
 <dt>Employer is resident on a reserve</dt><dd>
@@ -315,7 +323,7 @@
 </details>
  </li>
   <li>
-<h3 id="h_2">Determine the residency of the worker or payer</h3>
+<h3 id="h_2">Determine the residency of the employee or employer</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
@@ -700,10 +708,8 @@
 
 </li>
 <li>
-<h3 id="h_5">Withhold and report the payment on the slip</h3>
+<h3 id="h_5">Withhold payroll deductions and remit GST/HST</h3>
 <p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
-
-<p>You must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
 
 <ol class="lst-stps-sub">
 <li><details><summary><strong>Exempt</strong> income situation</summary>	
@@ -790,6 +796,12 @@
 </ol>
 </li>
 
+<li>
+<h3 id="h_6">Report the employment income on a slip</h3>
+
+<p>Learn more on how to report amounts on a T4 slip when you pay tax-exempt or partly tax-exempt employment income to your employee: <a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </p>
+
+</li>
 </ol>		 
 		 
 <h2 id="h_7">References</h2>
@@ -797,8 +809,13 @@
 <h3 id="h_7_1">Related</h3>
 <ul>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income </li>
-<li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t90.html">T90</a>, Income Exempt From Tax Under the Indian Act</li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>, Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Ac </li>
+<li><a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/indian-workers-canada-pension-plan.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cpp-ei-explained-indigenous">Indian workers and the Canada Pension Plan &ndash; CPP/EI explained</a> </li>
+<li><a href="https://www.sac-isc.gc.ca/eng/1100100032374/1572457769548">Indian status &ndash; Indigenous Services Canada</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_taxes-guidelines-indigenous">Indian Act Exemption for Employment Income Guidelines</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/campaigns/covid-19-update/guidance-application-indian-act-exemption.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_tax-guidelines-indigenous-covid19">Indigenous income tax issues &ndash; CRA and COVID</a> </li>
 </ul>
 
 
