--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -487,19 +487,11 @@ Indian Act</h3>
       <details id="tab2">
         <summary>Read full-text</summary>
         <div id="static">
-          <h2 class="mrgn-tp-sm">Full-text to determine the POE</h2>
-          <p>The following is the <strong>alternate format</strong> to the specific questions or results, and provides the same information in full-text. </p>
+          <h2 class="mrgn-tp-sm">Full-text to determine your withholding and reporting obligations</h2>
+           <p class="text-muted small">The following is the <strong>alternate format</strong> to the specific questions or results, and provides the same information in full-text. </p>
 
 
- <h2 class="h3">On this page</h2>
-  	
-<ul>
-<li><a href="#h_1">Steps</a></li>
-<li><a href="#h_7">References</a>
-</li>
-</ul>
-
-<h2>Steps</h2>
+<h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
   <li>             
 <h3 id="h_1">Determine if the worker is registered with Indigenous Services Canada (ISC) </h3>
