--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -35,6 +35,10 @@
       <body vocab="http://schema.org/" typeof="WebPage" class="experimental">
          <div id="def-top">
          </div>
+ <div class="alert alert-danger">
+<h3>The content is taken from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
+</div>     
+
          <!-- Write closure template -->
          <script type="text/javascript">
             var defTop = document.getElementById("def-top");
@@ -74,10 +78,7 @@
 </div>
           
  <h1 property="name" id="wb-cont" class="gc-thickline">Information on the tax exemption under section 87 of the Indian Act</h1>
-      <div class="alert alert-danger">
-<p>Content from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</p>
-</div>     
-
+     
      <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the Canada Revenue Agency (CRA) uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>We want you to be aware of tax benefits and requirements that apply to you as an individual who is an <a href="#hdng17">Indian</a> as defined in the Indian Act. On these pages, you will find general information on income tax, the goods and services tax/harmonized sales tax (GST/HST) and excise tax. There may be exceptions to the information we have provided here, and we have not dealt with all situations.</p>
 
