--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -35,6 +35,9 @@
       <body vocab="http://schema.org/" typeof="WebPage" class="experimental">
          <div id="def-top">
          </div>
+   <div class="alert alert-danger">
+<h3>Content from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
+</div>          
          <!-- Write closure template -->
          <script type="text/javascript">
             var defTop = document.getElementById("def-top");
@@ -74,9 +77,7 @@
 </div>
           
  <h1 property="name" id="wb-cont" class="gc-thickline">Indian Act exemption for employment income guidelines</h1>
-   <div class="alert alert-danger">
-<p>Content from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</p>
-</div>          
+
 
         <h3 id="intro">Introduction</h3>
 <p>Section 87 of the Indian Act exempts from taxation the personal property of an Indian situated on a reserve. The courts have determined that, for the purposes of section 87 of the Indian Act, employment income is personal property. In the case of employment income earned by an Indian, therefore, what must be determined is whether the employment income is situated on a reserve. The courts have directed that connecting factors must be considered when making this determination. Revenue Canada, after receiving representations from interested Indian groups and individuals, has identified a number of connecting factors that can be used to determine whether employment income is situated on a reserve.</p> <p>The location of the employment duties is a major connecting factor. However, the Department also recognizes that employees of bands, tribal councils, or organizations that operate on behalf of bands or tribal councils may perform most of their activities off reserve. For the employees, the connection to a reserve is that the employer is resident on a reserve and the Indian is employed in a non-commercial activity for the social, cultural, educational, or economic development of Indians who for the most part live on reserves.</p> <p>With a view to assisting the Indian community, the Department has developed the following guidelines, incorporating the various relevant connecting factors, that describe the employment situations covered by section 87 of the Indian Act. The treatment of other income related to employment is also discussed.</p> <p><strong>These guidelines are an administrative tool to assist indians in determining whether their employment income is exempt or not.</strong> </p> <p>Most employment situations that are subject to the exemption from taxation are covered in this brochure. However, it should be noted that, when applying all the connecting factors, there may be unusual or exceptional circumstances where all of the following apply:</p> 
