--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -35,9 +35,7 @@
       <body vocab="http://schema.org/" typeof="WebPage" class="experimental">
          <div id="def-top">
          </div>
- <div class="alert alert-danger">
-<h3>The content is taken from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
-</div>     
+   
 
          <!-- Write closure template -->
          <script type="text/javascript">
@@ -54,15 +52,24 @@
               },{
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
+	      },{
+                title: "Taxes",
+                href: "https://www.canada.ca/en/services/taxes.html"
               },{
-                title: "Payroll",
-                href: "../../index.html"
+
+                title: "Income tax",
+                href: "https://www.canada.ca/en/services/taxes/income-tax.html"
+            	    
               },{
-                title: "Calculate payroll deductions and contributions",
-                href: "../index.html"
-              },{
-                title: "Determine the tax treatment of payments other than regular employment income",
-                href: "index.html"
+                title: "Personal income tax",
+                href: "https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax.html"
+
+		 },{
+                title: "Who should file a tax return",
+                href: "https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/who-should-file-tax.html"	
+		 },{
+                title: "Taxes and benefits for Indigenous peoples",
+                href: "https://www.canada.ca/en/revenue-agency/services/indigenous-peoples.html"	      
               }
               ],
               search: true,
@@ -72,7 +79,10 @@
          </script>
 
            <main role="main" property="mainContentOfPage" class="container">
-
+ <div class="alert alert-danger">
+<h3>The content is taken from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
+</div> 
+<hr>
   <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
