--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -34,13 +34,10 @@
       </head>
       <body vocab="http://schema.org/" typeof="WebPage" class="experimental">
          <div id="def-top">
- <div class="alert alert-danger">
-<h3>Content from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
-</div>  
          </div>
           
          <!-- Write closure template -->
-         <script type="text/javascript">
+           <script type="text/javascript">
             var defTop = document.getElementById("def-top");
             defTop.outerHTML = wet.builder.top({
               lngLinks: [{
@@ -54,15 +51,24 @@
               },{
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
+	      },{
+                title: "Taxes",
+                href: "https://www.canada.ca/en/services/taxes.html"
               },{
-                title: "Payroll",
-                href: "../../index.html"
+
+                title: "Income tax",
+                href: "https://www.canada.ca/en/services/taxes/income-tax.html"
+            	    
               },{
-                title: "Calculate payroll deductions and contributions",
-                href: "../index.html"
-              },{
-                title: "Determine the tax treatment of payments other than regular employment income",
-                href: "index.html"
+                title: "Personal income tax",
+                href: "https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax.html"
+
+		 },{
+                title: "Who should file a tax return",
+                href: "https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/who-should-file-tax.html"	
+		 },{
+                title: "Taxes and benefits for Indigenous peoples",
+                href: "https://www.canada.ca/en/revenue-agency/services/indigenous-peoples.html"	      
               }
               ],
               search: true,
@@ -73,6 +79,10 @@
 
            <main role="main" property="mainContentOfPage" class="container">
 
+ <div class="alert alert-danger">
+<h3>Content from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
+</div>  
+<hr>
   <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
