--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -52,9 +52,6 @@
               },{
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
-	      },{
-                title: "Taxes",
-                href: "https://www.canada.ca/en/services/taxes.html"
               },{
 
                 title: "Income tax",
@@ -80,7 +77,7 @@
 
            <main role="main" property="mainContentOfPage" class="container">
  <div class="alert alert-danger">
-<h3>The content is taken from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to align with the payroll webpage and to incorporate coding that will enable the reuse of the content within this webpage.</h3>
+<h3>The content is taken from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to incorporate coding that will enable the reuse of the content within the payroll webpage.</h3>
 </div> 
 <hr>
   <div class="alert alert-info">
