--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -695,7 +695,7 @@ Indian Act</h3>
 <li class="cnjnctn-col">Employer is one of the following:
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">An Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves  </li>
-<li class="cnjnctn-col">An Indian organization controlled by an Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the social, cultural, educational, or economic development of Indians who for the most part live on reserves </li>
+<li class="cnjnctn-col">An Indian organization controlled by an Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="centred-popup" class="wb-lbx" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of Indians who for the most part live on reserves </li>
 </ul>
 </li>
 <li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
