--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -393,7 +393,7 @@ Indian Act</li>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</h3>
             <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <p class="mrgn-tp-md">To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
+ <p class="mrgn-tp-md">Lean more on the effective date of the agreements and the expiry dates: <a href="/cra-arc/payroll/calculate/payment/first-nations-pop1.html">Information on the tax exemption under section 87 of the Indian Act</a></p>
 <hr> 
 <h4 class="mrgn-tp-md">Withholding obligations</h4>
   <p> <div data-ajax-replace="#ajax-notreg"></div>     </p>      
@@ -403,6 +403,7 @@ Indian Act</h3>
               <h3><small>Your result </small><br>
                The worker is not registered under the Indian Act</h3>
   <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
+<p>Learn more on how to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
 <hr>
  <h4 class="mrgn-tp-md">Withholding obligations</h4>
               <p>   <div data-ajax-replace="#ajax-notreg"></div> </p> 
