--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -393,7 +393,7 @@ Indian Act</li>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</h3>
             <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <p class="mrgn-tp-md">Lean more on the effective date of the agreements and the expiry dates: <a href="/cra-arc/payroll/calculate/payment/first-nations-pop1.html">Information on the tax exemption under section 87 of the Indian Act</a></p>
+ <p class="mrgn-tp-md">Lean more on the effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1540403121778/1568898903708">Final Agreements and Related Implementation Matters</a></p>
 <hr> 
 <h4 class="mrgn-tp-md">Withholding obligations</h4>
   <p> <div data-ajax-replace="#ajax-notreg"></div>     </p>      
