--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -393,7 +393,7 @@ Indian Act</li>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</h3>
             <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
- <p class="mrgn-tp-md">Lean more on the effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1540403121778/1568898903708">Final Agreements and Related Implementation Matters</a></p>
+ <p class="mrgn-tp-md">Lean more on the effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></p>
 <hr> 
 <h4 class="mrgn-tp-md">Withholding obligations</h4>
   <p> <div data-ajax-replace="#ajax-notreg"></div>     </p>      
@@ -403,7 +403,7 @@ Indian Act</h3>
               <h3><small>Your result </small><br>
                The worker is not registered under the Indian Act</h3>
   <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
-<p>Learn more on how to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
+<p>Learn more on how to prove registration from Indigenous Services Canada (ISC): <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
 <hr>
  <h4 class="mrgn-tp-md">Withholding obligations</h4>
               <p>   <div data-ajax-replace="#ajax-notreg"></div> </p> 
@@ -503,7 +503,11 @@ Indian Act</h3>
 
 <p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
-<p>Learn more on how to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
+<p>Learn more:
+ <ul>
+<li>How to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </li>
+<li>Effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></li>
+</ul> 
 </div>
 <hr>
 
