--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -897,6 +897,7 @@ Indian Act</h3>
 <li><h3 id="h_6">Report the payment on a slip</h3>
 <p class="mrgn-bttm-lg">You must report using the following slip depending on <strong>who</strong> you made the payment to:</p>
 
+<h4>Payment made to an employee</h4>
  <details><summary>T4 slip - Payment made to an employee - Income all exempt</summary> 
 <div id="ajax-t4-report-ex">
 	<p>Report on on a T4 slip payment made to an employee: </p>
@@ -929,6 +930,7 @@ Indian Act</h3>
 	 </div>
   </details>
 
+<h4>Payment made to a self-employed worker</h4>
  <details><summary>T4 slip - Payment made to a self-employed worker - Income all exempt</summary> 
    <div id="ajax-t4-self-report-ex">
 	<p>Report on a T4 slip the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher , a self-employed barber or hairdresser , or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
@@ -958,6 +960,7 @@ Indian Act</h3>
 	   </div>
   </details>
 
+<h4>Payment made to a person or partnership that was a shareholder</h4>
  <details><summary>T4A slip - Payment made to a person or partnership that was a shareholder - Income all exempt</summary> 
 <div id="ajax-t4a-report-ex">
     <p>Report on a T4A slip the payment made to a person or partnership that was a shareholder: </p> <ul class="fa-ul">
