--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -748,7 +748,8 @@ Indian Act</h3>
 <h3 id="h_5">Withhold payroll deductions and remit the GST/HST</h3>
 <p class="mrgn-bttm-lg">You must withhold and remit the deductions depending on <strong>who</strong> you made the payment to and the <strong>type of remuneration</strong>: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>:</p>
 
-<details><summary>Payment made to an employee - Employment income all exempt</summary>
+<h4>Payment made to an employee</h4>
+<details><summary>Payment made to an employee - Income all exempt</summary>
 <div id="ajax-withhold-ex">
 <p>You must withhold the following deductions from payments made to an employee:</p>
    
@@ -770,17 +771,16 @@ Indian Act</h3>
  </div>
 </details>
 
-<details><summary>Payment made to an employee - Employment income partly-exempt</summary>
-<div id="ajax-employee">
+<details><summary>Payment made to an employee - Income partly-exempt</summary>
+<div id="ajax-withhold-part-ex">
 <p>You must withhold the following deductions from payments made to an employee:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
- <li class="cnjnctn-col">
-    <h3 id="partex" class="mrgn-tp-sm text-muted h4">Salary, wages and taxable benefits in cash<span class="wb-inv">: Option 1</span></h3>
+
     <p class="mrgn-bttm-0">Withhold: </p>
                       <ul class="fa-ul mrgn-bttm-lg">
                         <li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li>
                        <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
-                        <li><span class="fas fa-check fa-li text-success"></span> EI</li>
+                         <li><span class="fas fa-check fa-li text-success"></span> EI, taxable benefits in cash</li>
+ 		<li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small>, non-cash and near-cash taxable benefits</li>
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
                      <ul class="fa-ul">
@@ -788,30 +788,13 @@ Indian Act</h3>
 			 <li><span class="fas fa-times text-danger fa-li"></span>GST/HST - Allowances <small class="text-muted"> (do not remit)</small></li>
 						
 					 </ul>
-  </li> 
-
- <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Non-cash and near-cash taxable benefits<span class="wb-inv">: Option 2</span></h3>
-    <p class="mrgn-bttm-0">Withhold: </p>
-                     <ul class="fa-ul mrgn-bttm-lg">
-                         <li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li>
-                         <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
-                         <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small></li>
-                     </ul>
-                     <p class="mrgn-bttm-0">Remit:</p>
-                      <ul class="fa-ul">
-                        <li><span class="fas fa-check fa-li text-success"></span>GST/HST</li>
-						
-                     </ul>
-  </li>
- 
-</ul>
-
+  
 <p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
 <p>If the employer chooses not to apply for coverage, an <strong>Indian </strong>can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
  </div>
 </details>
 
+<h4>Payment made to a self-employed worker</h4>
 <details><summary>Payment made to a self-employed worker</summary>
 <div id="ajax-self">
 <p>You must withhold the following deductions from payments made to a self-employed worker: </p>
