--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -841,17 +841,15 @@ Indian Act</h3>
 </details>
 
 <h4>Payment made to a person or partnership that was a shareholder</h4>
-<details><summary>Payment made to a person or partnership that was a shareholder</summary>
+<details><summary>Income all exempt</summary>
 <div id="ajax-withhold-ex-person">
 <p>You must withhold the following deductions from payments made to a person or partnership that was a shareholder: </p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
- <li class="cnjnctn-col">
-    <h3 id="partex" class="mrgn-tp-sm text-muted h4">Salary, wages and taxable benefits in cash<span class="wb-inv">: Option 1</span></h3>
+
     <p class="mrgn-bttm-0">Withhold: </p>
                       <ul class="fa-ul mrgn-bttm-lg">
-                        <li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li>
-                       <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
-                        <li><span class="fas fa-check fa-li text-success"></span> EI</li>
+                        <li><span class="fas fa-check fa-li text-success"></span> CPP, <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
+                           <li><span class="fas fa-check fa-li text-success"></span> EI, taxable benefits in cash</li>
+ 		<li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small>, non-cash and near-cash taxable benefits</li>
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
                      <ul class="fa-ul">
@@ -859,28 +857,31 @@ Indian Act</h3>
 			 <li><span class="fas fa-times text-danger fa-li"></span>GST/HST - Allowances <small class="text-muted"> (do not remit)</small></li>
 						
 					 </ul>
-  </li> 
+ 
+ </div>
+</details>
+<details><summary>Income partly-exempt</summary>
+<div id="ajax-withhold-part-ex-person">
+<p>You must withhold the following deductions from payments made to a person or partnership that was a shareholder: </p>
 
- <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Non-cash and near-cash taxable benefits<span class="wb-inv">: Option 2</span></h3>
     <p class="mrgn-bttm-0">Withhold: </p>
-                     <ul class="fa-ul mrgn-bttm-lg">
-                         <li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li>
-                         <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
-                         <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small></li>
+                      <ul class="fa-ul mrgn-bttm-lg">
+                        <li><span class="fas fa-check fa-li text-success"></span> Income tax, on the <strong>portion of the income which is taxable</strong></li>
+                       <li><span class="fas fa-check fa-li text-success"></span> CPP, on the <strong>portion of the income which is taxable</strong> or <strong>all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></strong> election</li>
+                        <li><span class="fas fa-check fa-li text-success"></span> EI, taxable benefits in cash</li>
+ 		<li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small>, non-cash and near-cash taxable benefits</li>
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
-                      <ul class="fa-ul">
-                        <li><span class="fas fa-check fa-li text-success"></span>GST/HST</li>
+                     <ul class="fa-ul">
+                         <li><span class="fas fa-check fa-li text-success"></span>GST/HST - Reimbursements</li>
+			 <li><span class="fas fa-times text-danger fa-li"></span>GST/HST - Allowances <small class="text-muted"> (do not remit)</small></li>
 						
-                     </ul>
-  </li>
+					 </ul>
  
-</ul>
  </div>
 </details>
 <div id="ajax-howcalc">
-<p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
+<p class="mrgn-tp-md"><span class="fas fa-calculator fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
  </div>
 </li>
 
@@ -978,7 +979,7 @@ Indian Act</h3>
   </details>
 
 <div id="ajax-howreport">
-	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
+	<p class="mrgn-tp-md"><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
 	 </div>
 
 </li>
