--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -433,7 +433,7 @@ Indian Act</h3>
 <p>Learn more on how to prove registration from Indigenous Services Canada (ISC): <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
- <p> <div data-ajax-replace="#ajax-notreg"></div>     </p> 
+<div data-ajax-replace="#ajax-notreg"></div>    
  <details><summary>Withholding obligations </summary>
          <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div>
   </details>
@@ -449,14 +449,15 @@ Indian Act</h3>
 <p>Add intro here. </p> 
 <hr>
   <h4>Withholding obligations </h4>
-        <p>  <div data-ajax-replace="#ajax-t4a-withhold"></div></p>
-<p> <div data-ajax-replace="#ajax-howcalc"></div>     </p> 
+        <div data-ajax-replace="#ajax-t4a-withhold"></div>
+ <div data-ajax-replace="#ajax-howcalc"></div>     
   <h4>Reporting obligations - T4A slip </h4>
-		  <p>  <div data-ajax-replace="#ajax-t4a-report"></div></p>
-<p> <div data-ajax-replace="#ajax-howreport"></div>     </p> 
+		  <div data-ajax-replace="#ajax-t4a-report"></div>
+ <div data-ajax-replace="#ajax-howreport"></div>     
   
-  </details>
+ 
             </div>
+
             <div id="ajax-3yesa" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Employee reports for work physically to only 1 establishment of the employer</h3>
@@ -530,7 +531,7 @@ Indian Act</h3>
 
 <p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
-<p>Learn more:
+<p>Learn more:</p>
  <ul>
 <li>How to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </li>
 <li>Effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></li>
@@ -822,7 +823,7 @@ Indian Act</h3>
 
 <h4>Payment made to a self-employed worker</h4>
 <details><summary>Income all exempt</summary>
-<div id="ajax-withhold-part-ex-self">
+<div id="ajax-withhold-ex-self">
 <p>You must withhold the following deductions from payments made to a self-employed worker: </p>
  <p class="mrgn-bttm-0">Withhold: </p>
                       <ul class="fa-ul mrgn-bttm-lg">
